# open-env

./: .gitignore  Dockerfile  OPENENV_SUBMISSION_CHECKLIST.md  README.md  environment.py  inference.py  models.py  openenv.yaml  output.txt  pyproject.toml  qa_test.py  requirements.txt  test_env.py  validate.sh
server/: __init__.py  app.py  environment.py  grader.py  models.py  tasks.py
static/: index.html  main.js  style.css
